Simple WorldExport tester

--- a/FortMapperTest/FortMapperTest.csproj
+++ b/FortMapperTest/FortMapperTest.csproj
@@ -15,6 +15,16 @@
     <None Update="Loot\Loot.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="World\World.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="World\World.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="World\" />
   </ItemGroup>
 
 </Project>
